css/main.css
/* ... */
/*-- tablet landscape --*/

@media (max-width: 960px) {
  #leftMain .panelthb,
  #rightMain .panelthb {
    width: 40%;
  }
}
/*---- mini ----*/
@media only screen and (max-width: 600px) and (orientation: portrait) {
  .paneltxt__area {
    height: 80%;
  }

  #leftMain .panelthb,
  #rightMain .panelthb {
    bottom: 0;
    height: 25%;
    width: 100%;
  }
  .panelthb__01,
  .panelthb__02 {
    height: 100%;
    width: 50%;
  }
  .panelthb__02 {
    position: absolute;
    right: 0;
    top: 0;
  }

  #leftMain .paneltxt__pocket,
  #rightMain .paneltxt__pocket {
    font-size: small;
    width: 60%;
    bottom: auto;
    position: static;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
    padding: auto;
  }

  #ani-rect01 {
    top: 4%;
    width: 30%;
  }
  #ani-rect02 {
    top: 60%;
    right: 0;
    width: 30%;
  }
}

@media only screen and (max-width: 600px) {
  .panelslide,
  .paneltxtC__area {
    /* border: blueviolet 1px solid; */
  }
  .dotnav__mobile {
    bottom: 10px !important;
    /* margin-bottom: 8vh */
    /* border: blueviolet 1px solid; */
  }
}
/* ------------ */
/* Manage       */
/* ------------ */
#manageMain {
  background: url(../img/bg_fourth.png) center center no-repeat;
  background-size: cover;
  margin-bottom: 20%;
}
#manageMain .content .content__brim {
  background-color: rgba(235, 235, 235, 0.5);
  width: 70vw;
  height: auto;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
  border: 1px solid brown;
  padding: 8% 10%;
}

/* #manageMain .managetxt__pocket {
  border: 1px solid pink;
} */

/* 
#manageMain .managetxt__text {
  border: 1px solid brown;
  margin-bottom: 10px; 
}*/

#manageMain .managetxt__client img {
  margin: 2%;
  max-height: 65px;
  /* margin: 18px; */
  /* border: 1px solid blue; */
}

/* ------------ */
/* Footer       */
/* ------------ */
#contact-me {
  background-image: url(../img/bg_footer.png);
  background-repeat: no-repeat;
  overflow: hidden;
}
.footer {
  top: 100%;
  font-size: small;
  text-align: center;
  width: 100%;
  position: relative;
}

.footer-bg-circle {
  content: "";
  display: inline-block;
  background-color: #efebe2;
  border-top-left-radius: 90px;
  border-top-right-radius: 90px;
  height: 70px;
  width: 140px;
  /* transition: background-color 0.8s ease; */
}

.footer-bg-rect {
  position: absolute;
  width: 100%;
  height: 32px;
  background-color: #efebe2;
  bottom: 0;
}

.footer-pocket {
  position: absolute;
  bottom: 5px;
  text-align: center;
  width: 100%;
}

#contactme .contacttxt__pocket {
  text-align: center;
}

#contactme .contacttxt__text {
  font-size: x-large;
}

.contactme-icon {
  margin: 25px 10px;
  font-size: xx-large;
}

/* ------------ */
/* About Me     */
/* ------------ */

#aboutMe {
  background: url(../img/bg_abt02.png) right bottom no-repeat,
    url(../img/bg_abt01.png) left top no-repeat;
}

#aboutMe .aboutme__character img {
  padding: 20px 0;
  width: 180px;
  /* border: 1px solid violet; */
}

#aboutMe .text-content {
  /* width: 70%; */
  max-width: 60%;
}
/* ------------ */
/* Gallery      */
/* ------------ */

#logoG,
#IllustG,
#mascotG,
#psdtutG,
#printG,
#worksG,
#mainG,
#creative,
#codeG {
  background-color: #f6f4f0;
}

.gallery-wrapper {
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.text-content {
  width: 90%;
}

#psdtutG .text-container {
  margin-bottom: 30px;
}

.ads {
  height: 250px;
}

pre.scjSnipplet {
  max-height: 250px;
  margin-top: 0 !important;
}

#printG .textpanel-right .text-container {
  margin: 0 55px;
}
#printG .textpanel-right .text-content {
  margin-top: 30px;
  width: auto;
}

#mascotG .textpanel-right .text-container {
  margin: 0 55px;
}
#mascotG .textpanel-right .text-content {
  margin-top: 30px;
  width: auto;
}

#psdtutG .textpanel-right .text-container {
  margin: 0 55px;
}
#psdtutG .textpanel-right .text-content {
  margin-top: 30px;
  width: auto;
}

.thumbNav {
  padding: 5%;
}
.thumbNav img {
  /* border-radius: 50%; */
  width: 80px;
  height: 80px;
}
.thumbNav a:hover {
  text-decoration: none;
}

.cirNav {
  border-radius: 50%;
}
/* ------------------------ */
/* Footer Nav               */
/* ------------------------ */
.logo-module {
  margin-left: 5%;
}
.footer-content {
  margin-left: auto;
  margin-right: auto;
  white-space: nowrap;
}

.footer-navbtn-left,
.footer-navbtn-right {
  display: flex; /* uk-flex */
  align-items: center; /* uk-flex-middle */
  height: 200px;
  width: 50vw;
  -webkit-transition: all 1s ease;
  -moz-transition: all 1s ease;
  -o-transition: all 1s ease;
  -ms-transition: all 1s ease;
  transition: all 1s ease;

  font-size: x-large;
  color: #999;
  font-weight: 400;
}
.footer-navbtn-left {
  position: absolute;
  left: 0;
}
.footer-navbtn-right {
  position: absolute;
  right: 0;
}
.footer-navbtn-left:hover {
  width: 60vw;
  color: #666;
}

.footer-navbtn-right:hover {
  width: 60vw;
  color: #666;
}
.st0 {
  fill: #666;
}
.footer-navbtn-left:hover .st0 {
  fill: #dad0e8;
}
.footer-navbtn-right:hover .st0 {
  fill: #dad0e8;
}
/* ------------------------ */
/* Animation Last section   */
/* ------------------------ */
/* --- set --- */
#ani-rect01 {
  position: absolute;
  top: 0;
  /* border: 1px solid grey; */
}

#ani-rect02 {
  position: absolute;
  top: 0;
  right: 0;
  /* border: 1px solid grey; */
}
/* --- animate --- */
.bounce {
  transition: all 0.8s;
  color: #1e87f0;
}
/* .bounce .uk-link,
.bounce a {
  color: #1e87f0 !important;
} */

.bounce:hover {
  transform: translateY(-10px);
  text-decoration: none;
}
/* --- */
.scrollAni-arrow-sec a {
  position: relative;
  bottom: 5px;
  /* left: 50%; */
  z-index: 2;
  display: inline-block;
  -webkit-transform: translate(0, -50%);
  transform: translate(0, -50%);
  color: #9e9e9e;
  font-family: "avenir", sans-serif;
  /* font   : normal 400 20px/1 'Josefin Sans', sans-serif; */
  letter-spacing: 0.1em;
  text-decoration: none;
  transition: opacity 0.3s;
}
/* ... */

